--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,22 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+  #img_account{
+
+    height: 100px;
+    width: 100px; 
+    border-radius: 50%;
+    
+  }
+
+  @media screen and (max-width:346px) {
+    div.my_search{
+      flex-direction: column;
+      width: 100%;
+    }
+
+    select>option{
+       width: 50px;
+    }
+}
